반려동물전용 추천상품 상단 노출

--- a/src/main/resources/templates/product/productPaging.html
+++ b/src/main/resources/templates/product/productPaging.html
@@ -24,14 +24,30 @@
 
 </head>
 <body>
-
 <th:block th:replace="header/header :: header"></th:block>
+<div th:if="${speciesList != null}" class="container" style="width: 1500px;margin-left: auto; margin-right: auto;">
+    <h2><strong>당신의 반려친구를 위한 추천 3가지</strong></h2>
+    <ul style="list-style: none; margin-bottom: 400px" >
+        <li th:each="species:${speciesList}" style="margin-left: 100px; float: left;">
+            <a th:href="@{|/productDetail/${species.id}|}"><img th:src="@{|/upload/${species.storedFileName}}" width="250px" height="280px" style="margin-left: auto;margin-right: auto;" alt="사진이 없어요!"></a>
+            <h2 th:text="'상품명:'+' '+${species.productName}"></h2>
+            <h5 th:text="'조회수:'+${species.productHits}"></h5>
+        </li>
+    </ul>
+</div>
+<div th:if="${speciesList == null}">
+    <h2><strong>반려견 미등록 상태</strong></h2>
+</div>
+
+
+
+
 <div class="container" style="margin-left: auto;margin-right: auto; margin-top: 100px;">
     <div th:if="${session.loginEmail == 'admin'}">
         <a href="/productSave" class="btn btn-dark">관리자 상품등록</a>
     </div>
     <h2><strong>Best Hits 3</strong></h2>
-    <ul style="list-style: none; margin-bottom: 400px" >
+    <ul style="list-style: none; margin-bottom: 500px" >
         <li th:each="productHits:${productHitsList}" style="margin-left: 100px; float: left;">
             <a th:href="@{|/productDetail/${productHits.id}|}"><img th:src="@{|/upload/${productHits.storedFileName}}" width="250px" height="280px" style="margin-left: auto;margin-right: auto;" alt="사진이 없어요!"></a>
             <h2 th:text="'상품명:'+' '+${productHits.productName}"></h2>
