--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -19,7 +19,7 @@
 <body>
 <th:block th:replace="header/header :: header"></th:block>
 <main class="container mt-5">
-<div class="p-4 p-md-5 mb-4 rounded text-bg-light" style="background-image: url('https://img.freepik.com/free-photo/portrait-of-little-cute-dog-bichon-frise-isolated-over-white-background_155003-46153.jpg?w=1380&t=st=1672640660~exp=1672641260~hmac=12a06fe6a1d80151deb85e8f876f2bd288151f4dfcb740f1682743d0422c7c4f');background-size: cover; margin-top: 100px">
+<div class="p-4 p-md-5 mb-4 rounded text-bg-light" style="background-image: url('https://img.freepik.com/free-photo/portrait-of-little-cute-dog-bichon-frise-isolated-over-white-background_155003-46153.jpg?w=1380&t=st=1672640660~exp=1672641260~hmac=12a06fe6a1d80151deb85e8f876f2bd288151f4dfcb740f1682743d0422c7c4f');background-size: cover; margin-top: 100px;">
     <div class="col-md-6 px-0" >
         <h1 class="display-4 fst-italic" style="color: black" >Welcome to <br> Hi My buddy <br>당신과 반려견의<br>이야기를<br>시작해보세요.</h1>
         <p class="lead my-3" style="color: black">더 좋은 환경에서 <br> 아이들의 하나뿐인 <br> 친구가 되어주세요</p>
@@ -36,50 +36,41 @@
         </div>
     </div>
 </div>
-    <div style="margin-top: 200px">
-<div class="row mb-2 mt-5" style="margin-top: 100px; margin-bottom: 150px">
-    <div class="col-md-6">
-        <div class="row g-0 border rounded overflow-hidden flex-md-row mb-4 shadow-sm h-md-250 position-relative">
-            <div class="col p-4 d-flex flex-column position-static">
-                <strong class="d-inline-block mb-2 text-black">입양신청</strong>
-                <h3 class="mb-0">입양신청 방법</h3>
-                <div class="mb-1 text-muted">설명</div>
-                <p class="card-text mb-auto">반려 친구를 입양 할 수 있습니다. <br> 자세한 내용을 클릭하여 확인해 주세요.</p>
-                <div th:if="${session.loginEmail}">
-                <a href="/adopt" class="stretched-link text-black">클릭</a>
-                </div>
-                <div th:unless="${session.loginEmail}">
-                    <h3>로그인 후 사용해주세요.</h3>
-                </div>
-            </div>
-            <div class="col-auto d-none d-lg-block">
-                <img src="https://cdn-icons-png.flaticon.com/512/107/107354.png?w=826&t=st=1672098555~exp=1672099155~hmac=8b8142f5f81d0ebeff6e429267c42154e48a431febe53bfc554743069fbb6811" alt="" style="width: 250px; height: 250px">
-            </div>
-        </div>
-    </div>
-    <div class="col-md-6">
 
-        <div class="row g-0 border rounded overflow-hidden flex-md-row mb-4 shadow-sm h-md-250 position-relative">
-            <div class="col p-4 d-flex flex-column position-static">
-                <strong class="d-inline-block mb-2 text-black">입양등록</strong>
-                <h3 class="mb-0">입양등록 방법</h3>
-                <div class="mb-1 text-muted">설명</div>
-                <p class="mb-auto">내 친구를 더 좋은 환경으로 보내줄 수 있습니다. <br> 자세한 내용을 확인해 주세요.</p>
-                <div th:if="${session.loginEmail}">
-                <a th:href="@{|/adoptSave/${session.loginEmail}|}" class="stretched-link text-black">클릭</a>
-                </div>
-                <div th:unless="${session.loginEmail}">
-                    <h3>로그인 후 사용해주세요.</h3>
-                </div>
-            </div>
-            <div class="col-auto d-none d-lg-block">
-                <img src="https://cdn-icons-png.flaticon.com/512/84/84813.png?w=826&t=st=1672098589~exp=1672099189~hmac=23db387df2c28a331f985edaa74e74ca33b5abe1e3d7b5f494f61eab6ff82156" alt="" style="width: 250px; height: 250px">
-            </div>
-        </div>
+<!--최근 입양건 -->
+    <div clas="container mt-5 mb-5" >
+        <h2 style="margin-top: 100px"><strong>최근 입양 성공 한마디</strong></h2>
+        <table class="table table-hover" id="list" style="margin-left:auto; margin-right: auto; width: 1500px; " >
+            <tr>
+                <th>글번호</th>
+                <th>입양해주신 분</th>
+                <th>입양받으신 분</th>
+                <th>입양 한 마디</th>
+                <th>입양 날짜</th>
+            </tr>
+            <tr th:each="success : ${successList}" >
+                <td th:text="${success.getId()}"></td>
+                <td th:text="${success.getAgreeWriter()}"></td>
+                <td th:text="${success.getAgreeApplyWriter()}"></td>
+                <td th:text="${success.getAgreeContents()}"></td>
+                <td th:text="*{#temporals.format(success.getSuccessSaveTime(), 'yyyy년 MM월 dd일')}"></td>
+            </tr>
+        </table>
     </div>
-</div>
+
+<!--best 상품-->
+    <div class="container" style="margin-left: auto;margin-right: auto; margin-top: 100px; ">
+
+        <h2><strong>실시간 Best Hits 3 반려상품</strong></h2>
+        <ul style="list-style: none; margin-bottom: 400px; width: 1500px"  >
+            <li th:each="productHits:${productHitsList}" style="margin-left: 100px; float: left;">
+                <a th:href="@{|/productDetail/${productHits.id}|}"><img th:src="@{|/upload/${productHits.storedFileName}}" width="250px" height="280px" style="margin-left: auto;margin-right: auto;" alt="사진이 없어요!"></a>
+                <h2 th:text="'상품명:'+' '+${productHits.productName}"></h2>
+                <h5 th:text="'조회수:'+${productHits.productHits}"></h5>
+            </li>
+        </ul>
     </div>
-<!--    <a href="/product" class="btn btn-dark">반려용품</a>-->
+
 </main>
 <div>
 <div class="container" style="margin-top: 100px" >
