--- a/src/main/resources/templates/header/header.html
+++ b/src/main/resources/templates/header/header.html
@@ -23,7 +23,7 @@
                   </div>
                   </div>
                   <a href="/memberLogout" class="link-secondary">로그아웃</a>
-                  <a href="/" class="text-black">main</a>
+                  <a th:href="@{|/memberMain/${session.loginEmail}|}" class="text-black">main</a>
                   <h4 th:text="${session.loginEmail}"></h4><h4>님 환영합니다.</h4>
               </div>
               <div th:unless="${session.loginEmail}">
@@ -50,7 +50,7 @@
           <a class="p-2 link-secondary" href="/adopt" ><strong>입양글</strong></a>
           <a class="p-2 link-secondary" href="/successFind" ><strong>입양후기</strong></a>
           <a class="p-2 link-secondary" th:href="@{|/adoptSave/${session.loginEmail}|}"><strong>입양등록</strong></a>
-          <a class="p-2 link-secondary" th:href="@{|/product/${session.loginEmail}|}"><strong>반려용품</strong></a>
+          <a class="p-2 link-secondary" href="/product"><strong>반려용품</strong></a>
           <a class="p-2 link-secondary" href="#" ><strong>FAQ</strong></a>
             </nav>
           </div>
@@ -59,12 +59,7 @@
             <a class="p-2 link-secondary" href="/adoptList" ><strong>입양글</strong></a>
             <a class="p-2 link-secondary" href="#" onclick="alert('로그인 후 사용 가능합니다.')"><strong>입양후기</strong></a>
             <a class="p-2 link-secondary" href="#" onclick="alert('로그인 후 사용 가능합니다.')"><strong>입양등록</strong></a>
-                <div th:if="${session.loginEmail}">
-                    <a class="p-2 link-secondary" th:href="@{|/product/${session.loginEmail}|}"><strong>반려용품</strong></a>
-                </div>
-                <div th:unless="${session.loginEmail}">
-                    <a class="p-2 link-secondary" th:href="@{|/product/${session.loginEmail}|}"><strong>반려용품</strong></a>
-                </div>
+            <a class="p-2 link-secondary" href="#" onclick="alert('로그인 후 사용 가능합니다.')"><strong>반려용품</strong></a>
             <a class="p-2 link-secondary" href="#" onclick="alert('로그인 후 사용 가능합니다.')"><strong>FAQ</strong></a>
             </nav>
           </div>
