--- a/src/main/resources/templates/product/productDetail.html
+++ b/src/main/resources/templates/product/productDetail.html
@@ -12,6 +12,11 @@
             font-family: 'Dongle', sans-serif;
             font-size: 30px;
         }
+        button {
+            border: 0;
+            outline: 0;
+            background-color:transparent;
+        }
 
     </style>
 </head>
@@ -20,7 +25,9 @@
 <div class="container input-group" style="margin-top: 50px; margin-left: auto; margin-right: auto;">
 
     <img th:src="@{|/upload/${product.storedFileName}}" alt="" style="margin-right: 20px">
-            <table class="">
+            <table class="table table-hover">
+                <input type="text" th:value="${session.loginEmail}" id="memberEmail" hidden>
+                <input type="text" th:value="${product.id}" id="productId" hidden>
                 <tr>
                     <th>상품명:</th>
                     <td th:text="${product.productName}"></td>
@@ -41,8 +48,33 @@
                     <th>결제하기:</th>
                     <td><a href="#" class="btn btn-warning">결제</a></td>
                 </tr>
+                <tr>
+                    <th>카카오페이:</th>
+                    <td>
+                        <a href="" style="margin-left: 5px">
+                        <img src="https://developers.kakao.com/tool/resource/static/img/button/pay/payment_icon_yellow_small.png" alt="">
+                        </a>
+                    </td>
+                </tr>
+                <tr>
+                    <th>좋아요:</th>
+                    <td>
+                        <div id="likeArea">
+                        <button onclick="likeSave()">
+                            <svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" fill="currentColor" class="bi bi-balloon-heart" viewBox="0 0 16 16">
+                               <path fill-rule="evenodd" d="m8 2.42-.717-.737c-1.13-1.161-3.243-.777-4.01.72-.35.685-.451 1.707.236 3.062C4.16 6.753 5.52 8.32 8 10.042c2.479-1.723 3.839-3.29 4.491-4.577.687-1.355.587-2.377.236-3.061-.767-1.498-2.88-1.882-4.01-.721L8 2.42Zm-.49 8.5c-10.78-7.44-3-13.155.359-10.063.045.041.089.084.132.129.043-.045.087-.088.132-.129 3.36-3.092 11.137 2.624.357 10.063l.235.468a.25.25 0 1 1-.448.224l-.008-.017c.008.11.02.202.037.29.054.27.161.488.419 1.003.288.578.235 1.15.076 1.629-.157.469-.422.867-.588 1.115l-.004.007a.25.25 0 1 1-.416-.278c.168-.252.4-.6.533-1.003.133-.396.163-.824-.049-1.246l-.013-.028c-.24-.48-.38-.758-.448-1.102a3.177 3.177 0 0 1-.052-.45l-.04.08a.25.25 0 1 1-.447-.224l.235-.468ZM6.013 2.06c-.649-.18-1.483.083-1.85.798-.131.258-.245.689-.08 1.335.063.244.414.198.487-.043.21-.697.627-1.447 1.359-1.692.217-.073.304-.337.084-.398Z"/>
+                            </svg>
+                        </button>
+                        </div>
+                    </td>
+                </tr>
             </table>
-
+<!--    색있는 하트-->
+<!--    <button onclick="likeDelete()">-->
+<!--    <svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" fill="currentColor" class="bi bi-balloon-heart-fill" viewBox="0 0 16 16">-->
+<!--        <path fill-rule="evenodd" d="M8.49 10.92C19.412 3.382 11.28-2.387 8 .986 4.719-2.387-3.413 3.382 7.51 10.92l-.234.468a.25.25 0 1 0 .448.224l.04-.08c.009.17.024.315.051.45.068.344.208.622.448 1.102l.013.028c.212.422.182.85.05 1.246-.135.402-.366.751-.534 1.003a.25.25 0 0 0 .416.278l.004-.007c.166-.248.431-.646.588-1.115.16-.479.212-1.051-.076-1.629-.258-.515-.365-.732-.419-1.004a2.376 2.376 0 0 1-.037-.289l.008.017a.25.25 0 1 0 .448-.224l-.235-.468ZM6.726 1.269c-1.167-.61-2.8-.142-3.454 1.135-.237.463-.36 1.08-.202 1.85.055.27.467.197.527-.071.285-1.256 1.177-2.462 2.989-2.528.234-.008.348-.278.14-.386Z"/>-->
+<!--    </svg>-->
+<!--    </button>-->
 </div>
 
 
@@ -62,5 +94,66 @@
 
 </body>
 
+<script th:inline="javascript">
+    const likeSave=()=>{
+        const productId = document.getElementById("productId").value;
+        const memberEmail = document.getElementById("memberEmail").value;
+        let likeArea =document.getElementById("likeArea");
+
+        $.ajax({
+            type:"post",
+            url:"/likeSave",
+            data:{
+                productId : productId,
+                memberEmail : memberEmail
+            },
+            dateType: "text",
+            success: function (like){
+                console.log(like);
+                if(like=="good"){
+                    likeArea.innerHTML="  <button onclick=\"likeDelete()\">\n" +
+                        "    <svg xmlns=\"http://www.w3.org/2000/svg\" width=\"30\" height=\"30\" fill=\"currentColor\" class=\"bi bi-balloon-heart-fill\" viewBox=\"0 0 16 16\">\n" +
+                        "        <path fill-rule=\"evenodd\" d=\"M8.49 10.92C19.412 3.382 11.28-2.387 8 .986 4.719-2.387-3.413 3.382 7.51 10.92l-.234.468a.25.25 0 1 0 .448.224l.04-.08c.009.17.024.315.051.45.068.344.208.622.448 1.102l.013.028c.212.422.182.85.05 1.246-.135.402-.366.751-.534 1.003a.25.25 0 0 0 .416.278l.004-.007c.166-.248.431-.646.588-1.115.16-.479.212-1.051-.076-1.629-.258-.515-.365-.732-.419-1.004a2.376 2.376 0 0 1-.037-.289l.008.017a.25.25 0 1 0 .448-.224l-.235-.468ZM6.726 1.269c-1.167-.61-2.8-.142-3.454 1.135-.237.463-.36 1.08-.202 1.85.055.27.467.197.527-.071.285-1.256 1.177-2.462 2.989-2.528.234-.008.348-.278.14-.386Z\"/>\n" +
+                        "    </svg>\n" +
+                        "    </button>"
+                }else{
+                    alert("오류");
+                }
+            },
+            error: function (ck) {
+
+            }
+        })
+    }
+    const likeDelete=()=> {
+        const productId = document.getElementById("productId").value;
+        const memberEmail = document.getElementById("memberEmail").value;
+        let likeArea =document.getElementById("likeArea");
+
+        $.ajax({
+            type:"post",
+            url:"/likeDelete",
+            data:{
+                productId : productId,
+                memberEmail : memberEmail
+            },
+            dateType: "text",
+            success: function (like){
+                console.log(like);
+                if(like=="good"){
+                  likeArea.innerHTML="<button onclick=\"likeSave()\">\n" +
+                      "                            <svg xmlns=\"http://www.w3.org/2000/svg\" width=\"30\" height=\"30\" fill=\"currentColor\" class=\"bi bi-balloon-heart\" viewBox=\"0 0 16 16\">\n" +
+                      "                               <path fill-rule=\"evenodd\" d=\"m8 2.42-.717-.737c-1.13-1.161-3.243-.777-4.01.72-.35.685-.451 1.707.236 3.062C4.16 6.753 5.52 8.32 8 10.042c2.479-1.723 3.839-3.29 4.491-4.577.687-1.355.587-2.377.236-3.061-.767-1.498-2.88-1.882-4.01-.721L8 2.42Zm-.49 8.5c-10.78-7.44-3-13.155.359-10.063.045.041.089.084.132.129.043-.045.087-.088.132-.129 3.36-3.092 11.137 2.624.357 10.063l.235.468a.25.25 0 1 1-.448.224l-.008-.017c.008.11.02.202.037.29.054.27.161.488.419 1.003.288.578.235 1.15.076 1.629-.157.469-.422.867-.588 1.115l-.004.007a.25.25 0 1 1-.416-.278c.168-.252.4-.6.533-1.003.133-.396.163-.824-.049-1.246l-.013-.028c-.24-.48-.38-.758-.448-1.102a3.177 3.177 0 0 1-.052-.45l-.04.08a.25.25 0 1 1-.447-.224l.235-.468ZM6.013 2.06c-.649-.18-1.483.083-1.85.798-.131.258-.245.689-.08 1.335.063.244.414.198.487-.043.21-.697.627-1.447 1.359-1.692.217-.073.304-.337.084-.398Z\"/>\n" +
+                      "                            </svg>\n" +
+                      "                        </button>"
+                }else{
+                    alert("오류");
+                }
+            },
+            error: function (ck) {
+
+            }
+        })
+    }
 </script>
 </html>
