--- a/src/main/resources/templates/product/productPaging.html
+++ b/src/main/resources/templates/product/productPaging.html
@@ -33,7 +33,7 @@
     <h2><strong>Best Hits 3</strong></h2>
     <ul style="list-style: none; margin-bottom: 500px" >
         <li th:each="productHits:${productHitsList}" style="margin-left: 100px; float: left;">
-            <a th:href="@{|/productDetail/${productHits.id}|}"><img th:src="@{|/upload/${productHits.storedFileName}}" width="250px" height="280px" style="margin-left: auto;margin-right: auto;" alt="사진이 없어요!"></a>
+            <a th:href="@{|/productDetail/${productHits.id}/${session.loginEmail}|}"><img th:src="@{|/upload/${productHits.storedFileName}}" width="250px" height="280px" style="margin-left: auto;margin-right: auto;" alt="사진이 없어요!"></a>
             <h2 th:text="'상품명:'+' '+${productHits.productName}"></h2>
             <h5 th:text="'조회수:'+${productHits.productHits}"></h5>
         </li>
@@ -45,7 +45,7 @@
         <h2><strong>products</strong></h2>
         <ul style="list-style: none;">
             <li th:each="product:${productList}" style="margin-left: 100px; float: left; height: 500px">
-                <a th:href="@{|/productDetail/${product.id}|}"><img th:src="@{|/upload/${product.storedFileName}}" width="250px" height="280px" style="margin-left: auto;margin-right: auto;" alt="사진이 없어요!"></a>
+                <a th:href="@{|/productDetail/${product.id}/${session.loginEmail}|}"><img th:src="@{|/upload/${product.storedFileName}}" width="250px" height="280px" style="margin-left: auto;margin-right: auto;" alt="사진이 없어요!"></a>
                 <h2 th:text="'상품명:'+' '+${product.productName}"></h2>
                 <h3 th:text="'설명:'+${product.productContents}" ></h3>
                 <h4 th:text="'가격:'+${product.productPrice}+'원'"></h4>
