--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -58,7 +58,21 @@
         </table>
     </div>
 
+    <!--찜한 상품-->
+    <div th:if="${productLikeList}" class="container" style="margin-left: auto;margin-right: auto; margin-top: 100px; ">
 
+        <h2><strong>최근 찜해 둔 상품 3</strong></h2>
+        <ul style="list-style: none; margin-bottom: 400px; width: 1500px"  >
+            <li th:each="productLike:${productLikeList}" style="margin-left: 100px; float: left;">
+                <a th:href="@{|/productDetail/${productLike.id}|}"><img th:src="@{|/upload/${productLike.storedFileName}}" width="250px" height="280px" style="margin-left: auto;margin-right: auto;" alt="사진이 없어요!"></a>
+                <h2 th:text="'상품명:'+' '+${productLike.productName}"></h2>
+                <h5 th:text="'조회수:'+${productLike.productHits}"></h5>
+            </li>
+        </ul>
+    </div>
+    <div th:unless="${productLikeList}">
+        <h2>아직 찜을 한 상품이 없습니다!</h2>
+    </div>
     <!--best 상품-->
     <div th:if="${speciesList}" class="container" style="margin-left: auto;margin-right: auto; margin-top: 100px; ">
 
