--- a/src/main/resources/templates/product/productSave.html
+++ b/src/main/resources/templates/product/productSave.html
@@ -43,6 +43,7 @@
       <option value="선택">선택</option>
       <option value="이탈리안 그레이하운드">이탈리안 그레이하운드</option>
       <option value="말티즈">말티즈</option>
+      <option value="푸들">푸들</option>
     </select>
     <br>
     <input type="submit"  class="btn btn-dark" value="저장">
