--- a/src/main/resources/templates/member/memberLogin.html
+++ b/src/main/resources/templates/member/memberLogin.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
     <title>memberLogin</title>
@@ -36,6 +36,75 @@
     <input type="button" class="btn btn-dark" value="로그인" onclick="memberLogin()" style="float: right;">
   </form>
 </div>
+
+<div id="kakao">
+
+</div>
+
+<!--카카오-->
+<div>
+  <ul>
+    <li onclick="kakaoLogin();">
+      <a href="javascript:void(0)">
+        <span>카카오 로그인</span>
+      </a>
+    </li>
+    <li onclick="kakaoLogout();">
+      <a href="javascript:void(0)">
+        <span>카카오 로그아웃</span>
+      </a>
+    </li>
+  </ul>
+  <!-- 카카오 스크립트 -->
+  <script src="https://developers.kakao.com/sdk/js/kakao.js"></script>
+  <script>
+    Kakao.init('4c01cd21dea3f297e5d486eab7cee559'); //발급받은 키 중 javascript키를 사용해준다.
+    console.log(Kakao.isInitialized()); // sdk초기화여부판단
+    //카카오로그인
+    function kakaoLogin() {
+      Kakao.Auth.login({
+        success: function (response) {
+          console.log(response)
+          Kakao.API.request({
+            url: '/v2/user/me',
+            success: function (account) {
+
+              console.log(account)
+              const member = account.kakao_account.email;
+              window.location.href="kakaoLogin?memberEmail="+member;
+
+            },
+            fail: function (error) {
+              console.log(error)
+            },
+          })
+        },
+        fail: function (error) {
+          console.log(error)
+        },
+      })
+    }
+    //카카오로그아웃
+    function kakaoLogout() {
+      if (Kakao.Auth.getAccessToken()) {
+        Kakao.API.request({
+          url: '/v1/user/unlink',
+          success: function (response) {
+            console.log(response)
+          },
+          fail: function (error) {
+            console.log(error)
+          },
+        })
+        Kakao.Auth.setAccessToken(undefined)
+      }
+    }
+  </script>
+</div>
+<span id="kakaoEmail">
+
+</span>
+
 <div>
   <div class="container mt-5" >
     <footer class="py-3 my-4">
@@ -52,6 +121,9 @@
 </div>
 
 </body>
+<!-- 카카오 스크립트 -->
+
+
 <script>
   const memberLogin = () => {
     const email = document.getElementById("email").value;
