--- a/src/main/resources/templates/product/productDetail.html
+++ b/src/main/resources/templates/product/productDetail.html
@@ -74,16 +74,21 @@
                     </td>
                 </tr>
             </table>
-    <div>
-        <form action="" class="form-control" style="width: 800px">
-            <buttotn onclick="plus()">↑</buttotn><button onclick="minus()">↓</button>
-            <input type="text" class="form-control" value="0" id="cnt">
-            <input type="text" class="form-control">
-            <input type="text" class="form-control">
-        </form>
-    </div>
+<!--    <div>-->
+<!--        <form action="" class="form-control" style="width: 800px;margin-left: auto;margin-right: auto;">-->
+<!--            수량:-->
+<!--            <buttotn onclick="plus()">↑</buttotn><button onclick="minus()">↓</button>-->
+<!--            <input type="text" class="form-control" value="0" id="cnt">-->
+<!--            <br>-->
+<!--            <input type="text" class="form-control">-->
+<!--            <br>-->
+<!--            <input type="text" class="form-control">-->
+<!--        </form>-->
+<!--    </div>-->
 
 </div>
+
+
 
 
 
